@startuml

[*] --> DisplaySplashScreen : AppLaunched

DisplaySplashScreen --> DisplayMainScreen : LoadingFinishedAndUserLoggedIn
DisplaySplashScreen --> DisplayLoginScreen : LoadingFinishedAndUserNotLoggedIn
DisplaySplashScreen --> DisplayLoadingErrorScreen: LoadingStepsThrowsError

DisplayMainScreen --> [*] : AppClosed

DisplayLoginScreen --> [*] : AppClosed
DisplayLoginScreen --> DisplayMainScreen : UserLoggedIn

DisplayLoadingErrorScreen --> [*] : AppClosed

state DisplaySplashScreen {
  ' [*] --> SplashScreenLoading : StartLoading

  ' SplashScreenLoading --> DisplayLoadingFinished : LoadingStepsFinished
  ' SplashScreenLoading --> DisplayLoadingError : LoadingStepsThrowsError

  ' DisplayLoadingFinished --> [*] : DelayFinished
  ' DisplayLoadingError --> [*] : DelayFinished
}

state DisplayMainScreen {
  ' [*] --> DisplayTabProfile : TabProfileTapped

  ' DisplayTabProfile --> DisplayTabAccount : TabAccountTapped
  ' DisplayTabProfile --> [*] : AppClosed

  ' DisplayTabAccount --> DisplayTabProfile : TabProfileTapped
  ' DisplayTabAccount --> [*] : AppClosed

  ' state DisplayTabProfile {
    ' [*] --> OnboardingNewUser : ProfileNotFound

    ' OnboardingNewUser --> DisplayProfileInReview : ProfileInReview

    ' [*] --> DisplayError : ProfileLoadError
    ' DisplayError --> OnboardingNewUser : ProfileNotFound
    ' DisplayError --> DisplayProfileInReview : ProfileInReview
    ' DisplayError --> DisplayRevisionFlow : ProfileNeedsRevision

    ' [*] --> DisplayRevisionFlow : ProfileNeedsRevision
    ' DisplayRevisionFlow --> DisplayProfileInReview : ProfileInReview

    ' [*] --> DisplayProfileInReview : ProfileInReview
    ' DisplayProfileInReview --> DisplayRevisionFlow : ProfileNeedsRevision
    ' DisplayProfileInReview --> DisplayProfilePerformance : ProfileActive

  ' }

}

@enduml